pbc_contract_codegen/tests/action/success/zk/happy_init.rs
use pbc_contract_codegen::init;

pub fn main() {}

#[init]
fn init(
    _context: pbc_contract_common::context::ContractContext,
    _zk_state: pbc_contract_common::zk::ZkState<u64>,
) -> u64 {
    0
}
